tests/ui/input/unknown_param_lifetime.stderr
error: unknown generic parameter
 --> tests/ui/input/unknown_param_lifetime.rs:4:18
  |
4 | #[funcmap(params('a))]
  |                  ^^
